--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -3223,7 +3223,7 @@ jerry_binary_operation (jerry_binary_operation_t op,
 
   if (!jerry_value_is_error (result))
   {
-    if (jerry_get_boolean_value (result))
+    if (jerry_value_is_true (result))
     {
        // value1 and value2 are equal
     }
@@ -3279,7 +3279,7 @@ main (void)
                                                       instance_val,
                                                       constructor);
   if (!jerry_value_is_error (is_instance)
-      && jerry_get_boolean_value (is_instance) == true)
+      && jerry_value_is_true (is_instance))
   {
     /* ... */
   }
@@ -3590,48 +3590,6 @@ void main(void)
 # Getter functions of 'jerry_value_t'
 
 Get raw data from API values.
-
-## jerry_get_boolean_value
-
-**Summary**
-
-Gets the raw bool value from a `jerry_value_t`.
-
-**Prototype**
-
-```c
-bool
-jerry_get_boolean_value (const jerry_value_t value);
-```
-
-- `value` - api value
-- return value - boolean value represented by the argument.
-
-**Example**
-
-```c
-{
-  jerry_value_t value;
-  ... // create or acquire value
-
-  if (jerry_value_is_boolean (value))
-  {
-    bool raw_value = jerry_get_boolean_value (value);
-
-    ... // usage of raw value
-
-  }
-
-  jerry_release_value (value);
-}
-
-```
-
-**See also**
-
-- [jerry_value_is_boolean](#jerry_value_is_boolean)
-- [jerry_release_value](#jerry_release_value)
-
 
 ## jerry_get_number_value
 
@@ -7628,7 +7586,7 @@ main (void)
   jerry_value_t prop_name = jerry_create_string ((const jerry_char_t *) "handler_field");
 
   jerry_value_t has_prop_js = jerry_has_property (global_object, prop_name);
-  bool has_prop = jerry_get_boolean_value (has_prop_js);
+  bool has_prop = jerry_value_is_true (has_prop_js);
 
   jerry_release_value (has_prop_js);
   jerry_release_value (prop_name);
@@ -7689,7 +7647,7 @@ main (void)
   jerry_value_t prop_name = jerry_create_string ((const jerry_char_t *) "handler_field");
 
   jerry_value_t has_prop_js = jerry_has_own_property (global_object, prop_name);
-  bool has_prop = jerry_get_boolean_value (has_prop_js);
+  bool has_prop = jerry_value_is_true (has_prop_js);
 
   jerry_release_value (has_prop_js);
   jerry_release_value (prop_name);
@@ -9540,7 +9498,7 @@ find_my_object (const jerry_value_t candidate,
 
   /* Check if the given object has the required property. */
   jerry_value_t has_property = jerry_has_property (candidate, info_p->property_name);
-  bool object_found = jerry_get_boolean_value (has_property);
+  bool object_found = jerry_value_is_true (has_property);
 
   if (object_found)
   {
@@ -11633,7 +11591,7 @@ jerry_is_arraybuffer_detachable (const jerry_value_t value);
   jerry_value_t buffer = jerry_create_arraybuffer (16);
 
   jerry_value_t res = jerry_is_arraybuffer_detachable (buffer);
-  bool is_detachable = jerry_get_boolean_value (res);
+  bool is_detachable = jerry_value_is_true (res);
 
   // release buffer as it is not needed after this point
   jerry_release_value (res);
