Update the webpage
JerryScript-DCO-1.0-Signed-off-by: Zsolt Borbély zsborbely.u-szeged@partner.samsung.com

--- a/01.CONFIGURATION.md
+++ b/01.CONFIGURATION.md
@@ -63,6 +63,17 @@ To see how a profile file should be created, or what configuration options are a
 | CMake:  | `-DJERRY_PROFILE="path"`                     |
 | Python: | `--profile="path"`                           |
 
+### Promise callback
+
+Enables Promise event notification support. This feature allows setting a user callback, which is called when certain Promise related events occur such as
+creating a new Promise, resolving a Promise with a value, etc.
+
+| Options |                                              |
+|---------|----------------------------------------------|
+| C:      | `-DJERRY_PROMISE_CALLBACK=0/1`               |
+| CMake:  | `-DJERRY_PROMISE_CALLBACK=ON/OFF`            |
+| Python: | `--promise-callback=ON/OFF`                  |
+
 ### External context
 
 Enables external context support in the engine. By default, JerryScript uses a statically allocated context to store the current state of the engine internals.
@@ -149,7 +160,7 @@ Enabling this feature provides detailed error messages where available, like lin
 | Options |                                              |
 |---------|----------------------------------------------|
 | C:      | `-DJERRY_ERROR_MESSAGES=0/1`                 |
-| CMake:  | `--DJERRY_ERROR_MESSAGES=ON/OFF`             |
+| CMake:  | `-DJERRY_ERROR_MESSAGES=ON/OFF`              |
 | Python: | `--error-messages=ON/OFF`                    |
 
 ### Logging
@@ -183,7 +194,7 @@ This option is enabled by default.
 
 | Options |                                              |
 |---------|----------------------------------------------|
-| C:      | `-DJERRY_PROPRETY_HASHMAP=0/1`               |
+| C:      | `-DJERRY_PROPERTY_HASHMAP=0/1`               |
 | CMake:  | `<none>`                                     |
 | Python: | `<none>`                                     |
 
@@ -206,7 +217,7 @@ The default value is 512.
 | Options |                                              |
 |---------|----------------------------------------------|
 | C:      | `-DJERRY_GLOBAL_HEAP_SIZE=(int)`             |
-| CMake:  | `--DJERRY_GLOBAL_HEAP_SIZE=(int)`            |
+| CMake:  | `-DJERRY_GLOBAL_HEAP_SIZE=(int)`             |
 | Python: | `--mem-heap=(int)`                           |
 
 ### Garbage collection limit
