--- a/05.PORT-API.md
+++ b/05.PORT-API.md
@@ -95,12 +95,10 @@ void jerry_port_print_char (char c);
 
 ### Jerry Module system
 
-The port API provides functions that can be used by the module system to open
-and close source files, and normalize file paths.
-The `jerry_port_get_native_module` port function can be used to provide native
-modules to the engine. This function will be called when an import/export
-statement is encountered with an unknown module specifier, which embedders can
-use to supply native module objects based on the module name argument.
+The port API provides optional functions that can be used by the
+user application to resolve modules. If no callback is provided
+to `jerry_module_link`, the `jerry_port_module_resolve` function
+is used for resolving modules.
 
 ```c
 /**
@@ -125,66 +123,38 @@ jerry_port_release_source (uint8_t *buffer_p) /**< buffer to free */
 } /* jerry_port_release_source */
 
 /**
- * Normalize a file path
+ * Default module resolver.
  *
- * @return length of the path written to the output buffer
- */
-size_t
-jerry_port_normalize_path (const char *in_path_p, /**< input file path */
-                           char *out_buf_p,       /**< output buffer */
-                           size_t out_buf_size,   /**< size of output buffer */
-                           char *base_file_p)     /**< base file path */
-{
-  // normalize in_path_p by expanding relative paths etc.
-  // if base_file_p is not NULL, in_path_p is relative to that file
-  // write to out_buf_p the normalized path
-  // return length of written path
-} /* jerry_port_normalize_path */
-
-/**
- * Get the module object of a native module.
- *
- * Note:
- *      This port function is called by jerry-core when JERRY_MODULE_SYSTEM
- *      is enabled.
- *
- * @param name String value of the module specifier.
- *
- * @return Undefined, if 'name' is not a native module
- *         jerry_value_t containing the module object, otherwise
+ * @return a module object if resolving is successful, an error otherwise
  */
 jerry_value_t
-jerry_port_get_native_module (jerry_value_t name) /**< module specifier */
+jerry_port_module_resolve (const jerry_value_t specifier, /**< module specifier string */
+                           const jerry_value_t referrer, /**< parent module */
+                           void *user_p) /**< user data */
 {
-  (void) name;
-  return jerry_create_undefined ();
-}
-```
+  // Resolves a module using the specifier string. If a referrer is a module,
+  // and specifier is a relative path, the base path should be the directory
+  // part extracted from the path of the referrer module.
 
-## Promise
+  // The callback function of jerry_module_link may call this function
+  // if it cannot resolve a module. Furthermore if the callback is NULL,
+  // this function is used for resolving modules.
 
-```c
-/**
- * HostPromiseRejectionTracker operations
- */
-typedef enum
-{
-  JERRY_PROMISE_REJECTION_OPERATION_REJECT, /**< promise is rejected without any handlers */
-  JERRY_PROMISE_REJECTION_OPERATION_HANDLE, /**< handler is added to a rejected promise for the first time */
-} jerry_promise_rejection_operation_t;
+  // The default implementation only resolves ECMAScript modules, and does
+  // not (currently) use the user data.
+} /* jerry_port_module_resolve */
 
 /**
- * Track unhandled promise rejections.
- *
- * Note:
- *      This port function is called by jerry-core when JERRY_BUILTIN_PROMISE
- *      is enabled.
- *
- * @param promise rejected promise
- * @param operation HostPromiseRejectionTracker operation
+ * Release known modules.
  */
-void jerry_port_track_promise_rejection (const jerry_value_t promise,
-                                         const jerry_promise_rejection_operation_t operation);
+void
+jerry_port_module_release (const jerry_value_t realm) /**< if this argument is object, release only those modules,
+                                                       *   which realm value is equal to this argument. */
+{
+  // This function releases the known modules, forcing their reload
+  // when resolved again later. The released modules can be filtered
+  // by realms. This function is only called by user applications.
+} /* jerry_port_module_release */
 ```
 
 ## Date
@@ -427,33 +397,4 @@ void jerry_port_sleep (uint32_t sleep_time)
   (void) sleep_time;
 } /* jerry_port_sleep */
 #endif /* defined (JERRY_DEBUGGER) && (JERRY_DEBUGGER == 1) */
-```
-
-## Promise
-
-```c
-#include "jerryscript-port.h"
-
-/**
- * Default implementation of jerry_port_track_promise_rejection.
- * Prints the reason of the unhandled rejections.
- */
-void
-jerry_port_track_promise_rejection (const jerry_value_t promise, /**< rejected promise */
-                                    const jerry_promise_rejection_operation_t operation) /**< operation */
-{
-  (void) operation; /* unused */
-
-  jerry_value_t reason = jerry_get_promise_result (promise);
-  jerry_value_t reason_to_string = jerry_value_to_string (reason);
-  jerry_size_t req_sz = jerry_get_utf8_string_size (reason_to_string);
-  jerry_char_t str_buf_p[req_sz + 1];
-  jerry_string_to_utf8_char_buffer (reason_to_string, str_buf_p, req_sz);
-  str_buf_p[req_sz] = '\0';
-
-  jerry_release_value (reason_to_string);
-  jerry_release_value (reason);
-
-  printf ("Uncaught (in promise) %s\n", str_buf_p);
-} /* jerry_port_track_promise_rejection */
 ```
