--- a/10.EXT-REFERENCE-HANDLER.md
+++ b/10.EXT-REFERENCE-HANDLER.md
@@ -277,8 +277,7 @@ jerryx_set_properties (const jerry_value_t target_object,
 #include "jerryscript-ext/handler.h"
 
 static jerry_value_t
-handler (const jerry_value_t function_obj,
-         const jerry_value_t this_val,
+handler (const jerry_call_info_t *call_info_p,
          const jerry_value_t args_p[],
          const jerry_length_t args_cnt)
 {
@@ -341,8 +340,7 @@ when setting a property entry:
 #include "jerryscript-ext/handler.h"
 
 static jerry_value_t
-handler (const jerry_value_t function_obj,
-         const jerry_value_t this_val,
+handler (const jerry_call_info_t *call_info_p,
          const jerry_value_t args_p[],
          const jerry_length_t args_cnt)
 {
